amorphie.mocks/manifest/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-mocks
  namespace: amorphie-mocks-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: amorphie-mocks
