amorphie.mocks/manifest/ingress-old.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: amorphie-mocks
    namespace: amorphie-mocks-nginx
    annotations:
  spec:
    ingressClassName: nginx
    rules:
      - host: amorphie-mocks-nginx.da6eaae914f4424ea721.westeurope.aksapp.io
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amorphie-mocks
                port:
                  number: 80
